--- a/style/personaldossier.css
+++ b/style/personaldossier.css
@@ -14,6 +14,7 @@ height:34px;
 }
 #InteractionBar{
 	background-image:url(../images/bluegreybg.png);
+	margin-bottom:10px;
 }
 .pd_interactionItem{
 	background-image:url(../images/bluegreybg.png);
@@ -323,6 +324,11 @@ font-color:blue;
 .dossier_item_border{
 	border-bottom:1px solid #C9CACF;
 }
+
+
+
+
+
 #headerText{
 	width: 22.72em;
     height: 27em; /*it was 6em, it can be set auto to get automatically the height of the filled content*/
